Fix to problem with vertical scroll bar visible because of too high footer.

--- a/css/general.css
+++ b/css/general.css
@@ -19,7 +19,6 @@ body{
     color: gray;
     border-top:1px solid darkgray;
     width:100%;
-    height:140px;
     position:absolute;
     bottom:0;
 }
